--- a/package.json
+++ b/package.json
@@ -3,39 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.2",
     "antd": "^4.11.2",
     "axios": "^0.24.0",
     "env-cmd": "^10.1.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.11",
     "node-sass": "^4.14.1",
-    "prop-types": "15.6.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.8.6",
-    "react-google-login": "^5.2.2",
-    "react-icons": "^4.2.0",
-    "react-image-crop": "^8.6.5",
-    "react-infinite-scroll-component": "^5.1.0",
-    "react-redux": "^7.2.6",
-    "react-responsive-carousel": "^3.2.15",
-    "react-router-config": "5.0.0",
-    "react-router-dom": "5.0.0",
-    "react-scripts": "2.1.8",
-    "react-slick": "^0.28.0",
-    "redux": "4.0.1",
-    "redux-saga": "0.16.0",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
-    "semantic-ui-css": "2.4.1",
-    "semantic-ui-react": "0.86.0",
-    "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.3",
-    "sweetalert-react": "^0.4.11",
-    "uuid": "^8.3.2",
-    "uuidv4": "^6.2.11",
-    "validator": "10.11.0"
+    "prop-types": "15.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
