--- a/package.json
+++ b/package.json
@@ -9,14 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2",
-    "antd": "^4.11.2",
-    "axios": "^0.24.0",
-    "env-cmd": "^10.1.0",
-    "font-awesome": "^4.7.0",
-    "lodash": "^4.17.11",
-    "node-sass": "^4.14.1",
-    "prop-types": "15.6.1"
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
