--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2",
-     "antd": "^4.11.2",
-      "axios": "^0.24.0"
+    "antd": "^4.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
