--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2",
     "antd": "^4.11.2",
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "env-cmd": "^10.1.0",
+    "font-awesome": "^4.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
